<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#252525">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:background="#80D8FF"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_vertical"
            android:text="@string/padel_etsisi"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#3F51B5"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/noticias_y_eventos"
            android:textAlignment="center"
            android:textColor="#78909C"
            android:textSize="16sp"
            android:typeface="sans" />

        <ImageButton
            android:id="@+id/imageButton_noticias"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/noticias_y_eventos"
            android:textAlignment="center"
            app:srcCompat="@drawable/periodicos000"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/tiempo"
            android:textAlignment="center"
            android:textColor="#78909C"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/imageButton_tiempo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/tiempo"
            app:srcCompat="@drawable/sun_clouds_blue_sky_146410201994j"
            tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml"
            android:onClick="verTiempo"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/pistas"
            android:textAlignment="center"
            android:textColor="#78909C"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/imageButton_reservas"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:contentDescription="@string/pistas"
            android:onClick="reservarPista"
            app:srcCompat="@drawable/pexels_photo_3839646"
            tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>